# notepy

./: .babelrc  .editorconfig  .eslintrc.yml  .gitignore  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
app/: app.py  config.py.sample  helpers.py  notes.py  utils.py  views.py
app/js/: common.js  login.js  note_edit.js  todo_edit.js
app/js/lib/: components.js
app/jsx/: note_edit.js  todo_edit.js
app/static/: note_edit.js  note_edit.js.map  react  react-dom  sortablejs  styles.css  todo_edit.js  todo_edit.js.map  todotxt.js
app/static/angular/: note-edit-form.html
app/styles/: _bootstrap-custom.scss  common.css  common.scss  login.css  note_edit.css  note_edit.scss  todo_edit.css
app/templates/: auth_error.tpl  footer.tpl  header.tpl  login.tpl  note_edit (copie).tpl  note_edit.tpl  notes.tpl  todo_edit.tpl
