[project]
name = "notepy"
version = "0.1.0"
description = "Online notepad and todolist following the KISS philosophy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow ~=1.3",
    "beaker ~=1.12",
    "bottle ~=0.13.2",
    "gunicorn >=23",
    "passlib ~=1.7",
]

[tool.uv]
dev-dependencies = [
    "ipdb >=0.13.13",
    "ipython >=8.29.0",
]
